# 7b7b

./: README.md
7b7b-files/: PKGBUILD
compix/: PKGBUILD
config/: CMakeLists.txt
config/src/: CMakeLists.txt  globals.h  main.cpp  mainWindow.cpp  mainWindow.h
config/src/pages/: PageWidget.h  getPage.cpp  page_main.cpp
config/src/pages/defaultapps/: page_defaultapps.cpp  page_defaultapps.ui
config/src/pages/desktop/: page_interface_desktop.cpp
config/src/pages/locale/: page_session_locale.cpp
config/src/pages/menu/: page_interface_menu.cpp
config/src/pages/options/: page_session_options.cpp  page_session_options.h  page_session_options.ui
config/src/pages/panels/: page_interface_panels.cpp  page_interface_panels.h  page_interface_panels.ui
config/src/pages/wallpaper/: page_wallpaper.cpp
config/src/plugins/: LPlugins.cpp
config/src/widgets/: PanelWidget.cpp  PanelWidget.ui
controlpanel/: CMakeLists.txt  README.md  main.cpp  mainWindow.cpp
controlpanel/pages/: PageWidget.h  getPage.cpp  getPage.h  page_main.cpp  page_main.h
controlpanel/pages/autostart/: page_autostart.cpp  page_autostart.h
controlpanel/pages/defaultapps/: page_defaultapps.cpp  page_defaultapps.h
controlpanel/pages/desktop/: page_interface_desktop.cpp  page_interface_desktop.h
controlpanel/pages/locale/: page_session_locale.h
controlpanel/pages/menu/: page_interface_menu.cpp  page_interface_menu.h
controlpanel/pages/options/: page_session_options.cpp  page_session_options.h
controlpanel/pages/panels/: page_interface_panels.cpp  page_interface_panels.h
controlpanel/pages/soundtheme/: page_soundtheme.cpp  page_soundtheme.h
controlpanel/pages/wallpaper/: page_wallpaper.h
controlpanel/pkg/: PKGBUILD
controlpanel/plugins/: AppDialog.h  GetPluginDialog.h  LPlugins.cpp  LPlugins.h  PanelWidget.cpp  PanelWidget.h  PanelWidget.ui
controlpanel/src/: CMakeLists.txt  globals.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
controlpanel/src/pages/: page_main.h
controlpanel/src/pages/autostart/: page_autostart.cpp
controlpanel/src/pages/defaultapps/: page_defaultapps.cpp
controlpanel/src/pages/desktop/: page_interface_desktop.cpp
controlpanel/src/pages/locale/: page_session_locale.cpp
controlpanel/src/pages/menu/: page_interface_menu.cpp  page_interface_menu.h
controlpanel/src/pages/options/: page_session_options.cpp  page_session_options.h  page_session_options.ui
controlpanel/src/pages/panels/: page_interface_panels.cpp
controlpanel/src/pages/wallpaper/: page_wallpaper.cpp
controlpanel/src/plugins/: GetPluginDialog.cpp  LPlugins.cpp
controlpanel/src/widgets/: PanelWidget.h
desktop/: CMakeLists.txt  LSession.cpp  LSession.h  LWinInfo.h  LXcbEventFilter.cpp  LXcbEventFilter.h  README.md  main.cpp
desktop/data/: 7b7b-DE.desktop  start-7b7b-desktop  start-lumina-desktop
desktop/data/defaults/: 7b7bDesktop.conf  luminaDesktop.conf
desktop/desktop/: LDesktop.cpp  LDesktop.h  LDesktopBackground.cpp  LDesktopPluginSpace.cpp  LDesktopPluginSpace.h
desktop/desktop/desktop-plugins/: LDPlugin.cpp  LDPlugin.h  NewDP.h
desktop/desktop/desktop-plugins/applauncher/: AppLauncherPlugin.cpp  AppLauncherPlugin.h  OutlineToolButton.h
desktop/desktop/desktop-plugins/desktopview/: DesktopViewPlugin.cpp  DesktopViewPlugin.h
desktop/panel/: LPanel.cpp  LPanel.h
desktop/panel/panel-plugins/: LPPlugin.h  LTBWidget.h  NewPP.h
desktop/panel/panel-plugins/appmenu/: LAppMenuPlugin.cpp  LAppMenuPlugin.h
desktop/panel/panel-plugins/clock/: LClock.cpp  LClock.h
desktop/panel/panel-plugins/showdesktop/: LHomeButton.cpp  LHomeButton.h
desktop/panel/panel-plugins/spacer/: LSpacer.h
desktop/panel/panel-plugins/systemtray/: LSysTray.cpp  LSysTray.h  TrayIcon.cpp  TrayIcon.h
desktop/panel/panel-plugins/taskmanager/: LTBWidget.h  LTaskButton.cpp  LTaskButton.h  LTaskManagerPlugin.cpp  LTaskManagerPlugin.h
desktop/pkg/: PKGBUILD
desktop/src/: CMakeLists.txt  Globals.h  LSession.cpp  LSession.h  LWinInfo.cpp  LWinInfo.h  LXcbEventFilter.cpp  LXcbEventFilter.h  main.cpp
desktop/src/desktop/: LDesktop.cpp  LDesktop.h  LDesktopPluginSpace.cpp  LDesktopPluginSpace.h
desktop/src/desktop/desktop-plugins/: LDPlugin.cpp  NewDP.h
desktop/src/desktop/desktop-plugins/applauncher/: AppLauncherPlugin.cpp
desktop/src/desktop/desktop-plugins/desktopview/: DesktopViewPlugin.cpp
desktop/src/panel/: LPanel.cpp  LPanel.h
desktop/src/panel/panel-plugins/: LPPlugin.h  NewPP.h
desktop/src/panel/panel-plugins/appmenu/: LAppMenuPlugin.cpp
desktop/src/panel/panel-plugins/clock/: LClock.cpp  LClock.h
desktop/src/panel/panel-plugins/showdesktop/: LHomeButton.cpp  LHomeButton.h
desktop/src/panel/panel-plugins/systemtray/: TrayIcon.cpp  TrayIcon.h
desktop/src/panel/panel-plugins/taskmanager/: LTBWidget.h  LTaskButton.cpp  LTaskButton.h  LTaskManagerPlugin.cpp  LTaskManagerPlugin.h
desktop/src/widgets/: AppMenu.cpp  AppMenu.h
desktop/widgets/: AppMenu.cpp  AppMenu.h  BootSplash.cpp  BootSplash.h  SystemWindow.cpp  SystemWindow.h  SystemWindow.ui
fileinfo/: CMakeLists.txt  MainUI.cpp  MainUI.h
fileinfo/src/: CMakeLists.txt  MainUI.cpp  MainUI.h  MainUI.ui  main.cpp
lib/: CMakeLists.txt  LDesktopUtils.cpp  LFileInfo.cpp  LFileInfo.h  LIconCache.cpp  LInputDevice.cpp  LUtils.h  LuminaOS-Linux.cpp  LuminaOS.h  LuminaRandR.h  LuminaSingleApplication.cpp  LuminaXDG.cpp  XDGMime.cpp  XDGMime.h  lumina.pc.in
lib/cmake/: lumina-config.cmake.in
lib/pkg/: PKGBUILD
lib/src/: CMakeLists.txt  DesktopSettings.cpp  DesktopSettings.h  ExternalProcess.h  LDesktopUtils.cpp  LDesktopUtils.h  LIconCache.cpp  LIconCache.h  LUtils.cpp  LUtils.h  LuminaOS.cpp  LuminaOS.h  LuminaRandR-X11.cpp  LuminaRandR.h  LuminaSingleApplication.cpp  LuminaSingleApplication.h  LuminaX11.cpp  LuminaX11.h  LuminaXDG.cpp  LuminaXDG.h  ResizeMenu.cpp  ResizeMenu.h  XDGMime.cpp  XDGMime.h
lib/test/: CMakeLists.txt  main.cpp
open/: CMakeLists.txt  LDialog.cpp  LDialog.h  LDialog.ui  main.cpp
open/pkg/: PKGBUILD
open/src/: CMakeLists.txt  LDialog.cpp  LDialog.h  LDialog.ui  main.cpp
(+15 files in other folders)
